# plasma-bigscreen

./: README.md
components/bigscreenplugin/: global.cpp  global.h
components/bigscreenplugin/qml/: AbstractDelegate.qml
components/bigscreenplugin/qml/controls/: Button.qml  ButtonDelegate.qml  ComboBoxDelegate.qml  SwitchDelegate.qml  TextField.qml
components/bigscreenshell/: CMakeLists.txt  bigscreenshellsettings.cpp  bigscreenshellsettings.h
components/controllerhandler/: controllerhandlerstatus.cpp  controllerhandlerstatus.h
containments/homescreen/package/contents/ui/: FavoritesManager.qml  HomeScreen.qml  main.qml
containments/homescreen/package/contents/ui/homeoverlay/: ColumnActionsRow.qml  HomeOverlayWindow.qml  MainColumn.qml  TaskDelegate.qml
containments/homescreen/package/contents/ui/indicators/: Shutdown.qml
containments/homescreen/package/contents/ui/search/: SearchListView.qml  SearchWindow.qml
inputhandler/: CMakeLists.txt  controllermanager.cpp  controllermanager.h  device.cpp  device.h  devicewatcher.cpp  devicewatcher.h  inputaction.cpp  inputaction.h  inputhandlerdbus.cpp  inputhandlerdbus.h  sdlcontroller.cpp  sdlcontroller.h
inputhandler/libcec/: ceccontroller.cpp  ceccontroller.h
kcms/bigscreen-settings/ui/: main.qml
kcms/bluetooth/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  devicesproxymodel.cpp  devicesproxymodel.h
kcms/bluetooth/ui/: DeviceConnectionSidebar.qml  DeviceDelegate.qml  main.qml  script.js
kcms/input/ui/: main.qml
settingsapp/qml/: Main.qml
(+1 files in other folders)
